--- a/README.org
+++ b/README.org
@@ -1,7 +1,7 @@
 * ProxiesTaster
 Пакет/скрипт для работы с прокси
 
-+ [[file:docs/_build/html/index.html][Wiki]]
-+ [[file:docs/_build/html/package.html][Пакет]]
-+ [[file:docs/_build/html/app.html][Скрипт/Приложение]]
++ [[file:docs/_build/markdown/index.md][Wiki]]
++ [[file:docs/_build/markdown/package.md][Пакет]]
++ [[file:docs/_build/markdown/app.md][Скрипт/Приложение]]
 
